# scummvm_ios_libs_build_tool

./: CMakeLists.txt  ios.ini  ios.toolchain.cmake
patches/: fix-linkage-on-intl.patch  fix_fluidsynth_link_against_static_glib.patch  glib-build-glib-gthread.patch  meson-Fix-detection-of-static-libintl-on-macOS.patch  no-sdl.patch  only-keep-glib-and-gthread.patch  stub-showinterfaces.patch
